--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </nav>
 
     <section class="home">
-        <div class="text">Dasboard</div>
+        <div class="text">Contenido</div>
     </section>
 
     <script src="script.js"></script>
